--- a/Task-1/index.css
+++ b/Task-1/index.css
@@ -155,6 +155,14 @@ nav li a:hover {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 }
 
+/* Footer*/
+.footer {
+  background-color: #2c3e50;
+  color: white;
+  padding: 2rem;
+  margin-top: auto;
+}
+
 
 @media (min-width: 768px) {
 
